WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137412
REGRESSION(
r174216
): CodeBlock::dumpByteCodes crashes on op_push_name_scope
https://bugs.webkit.org/show_bug.cgi?id=137412
Summary
REGRESSION(r174216): CodeBlock::dumpByteCodes crashes on op_push_name_scope
Michael Saboff
Reported
2014-10-03 16:02:15 PDT
After
r174216
, setting the dumpGeneratedBytecodes or similar option to dump byte codes will crash after processing an op_push_name_scope byte code.
Attachments
Patch
(1.73 KB, patch)
2014-10-03 16:04 PDT
,
Michael Saboff
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2014-10-03 16:04:35 PDT
Created
attachment 239249
[details]
Patch
Mark Lam
Comment 2
2014-10-03 16:07:00 PDT
Comment on
attachment 239249
[details]
Patch r=me
Michael Saboff
Comment 3
2014-10-03 16:22:29 PDT
Committed
r174301
: <
http://trac.webkit.org/changeset/174301
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug