REGRESSION(r174216): CodeBlock::dumpByteCodes crashes on op_push_name_scope https://bugs.webkit.org/show_bug.cgi?id=137412

Reviewed by Mark Lam.

Added support for the JSNameScope::type opcode parameter in dumpBytecode().

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::dumpBytecode):


Canonical link: https://commits.webkit.org/155217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174301 268f45cc-cd09-0410-ab3c-d52691b4dbfc